deployment/yaml/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: api
  name: api
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8000
  selector:
    app: api
